--- a/assets/style.css
+++ b/assets/style.css
@@ -30,7 +30,7 @@
 	width: 85%;
 	vertical-align: top;
 	padding: 10px 0 0 10px;
-    background-color: #C4A484;
+    background-color: #A9BD93;
     border-radius: 15px;
  }
 
