--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,60 @@
+* {
+    background-color: #a9bd93;
+    border: 15px;
+}
+
+/* html {
+    height: 100%;
+  } */
+  
+  /* body {
+    margin: 0;
+    height: 100%;
+  } */
+  /* header {
+    padding: 0px;
+    font-family: "Avanta Garde", "Optima", Arial, sans-serif;
+    background-color: #a9bd93;
+    color: antiquewhite;
+    border-radius: 15px;
+  } */
+  
+header h1 {
+    display: inline-block;
+    font-size: 48px;
+    color: antiquewhite;
+}
+
+header nav {
+    padding-top: 70px;
+    margin-right: 15px;
+    float: right;
+    font-family: "Avanta Garde", "Optima", Arial, sans-serif;
+    font-size: 22px;
+}
+  
+/* header nav ul {
+    list-style-type: none;
+} */
+  
+header nav ul li {
+    display: inline-block;
+    margin-left: 25px;
+}
+  
+h2 {
+    display: inline-block;
+    font-size: 22px;
+    color: antiquewhite;
+}
 #main-container {
   display: table;
   width: 100%;
   height: 100%;
   background-color: #a9bd93;
   border-radius: 15px;
+  display: flex;
+  flex-direction: column;
 }
 
 #sidebar {
@@ -32,50 +83,6 @@
   width: 85%;
   vertical-align: top;
   padding: 10px 0 0 10px;
-}
-
-html {
-  height: 100%;
-}
-
-body {
-  margin: 0;
-  height: 100%;
-}
-header {
-  padding: 0px;
-  font-family: "Avanta Garde", "Optima", Arial, sans-serif;
-  background-color: #a9bd93;
-  color: antiquewhite;
-  border-radius: 15px;
-}
-
-header h1 {
-  display: inline-block;
-  font-size: 48px;
-  color: antiquewhite;
-}
-header nav {
-  padding-top: 70px;
-  margin-right: 15px;
-  float: right;
-  font-family: "Avanta Garde", "Optima", Arial, sans-serif;
-  font-size: 22px;
-}
-
-header nav ul {
-  list-style-type: none;
-}
-
-header nav ul li {
-  display: inline-block;
-  margin-left: 25px;
-}
-
-h2 {
-  display: inline-block;
-  font-size: 22px;
-  color: antiquewhite;
 }
 
 #first-app {
@@ -118,11 +125,11 @@ footer {
   color: antiquewhite;
   border-radius: 15px;
 }
-html,
+/* html,
 body {
   height: 100%;
   margin: 0;
-}
+} */
 
 .work {
   min-height: 100%;
@@ -148,9 +155,9 @@ body {
   justify-content: right;
 }
 
-.box {
+/* .box {
   margin: 50px;
-}
+} */
 /* .box1 { background-color: red; } */
 /* .box2 { background-color: orange; }
 .box3 { background-color: rgb(95, 62, 95); }
@@ -159,15 +166,19 @@ body {
 .box6 { background-color: rgb(41, 51, 194); }
 .box7 { background-color: rgb(161, 23, 104); }
 .box8 { background-color: rgb(247, 204, 12); } */
+legend {
+    font-family: "Avanta Garde", "Optima", Arial, sans-serif;
+    font-size: 20px;
+    color: antiquewhite;
+    border: 1px solid rgb(165, 165, 165);
+}
 
 @media screen and (max-width: 768px) {
     header,
     nav {
       flex-direction: column;
-      background-color: #a9bd93;
+      
     }
-
-
     #sidebar {
         flex-direction: column;
         order: 1;
@@ -183,6 +194,6 @@ body {
     }
     #resume {
         flex-direction: column;
-        oredr: 4;
+        order: 4;
     }
 }
