--- a/assets/style.css
+++ b/assets/style.css
@@ -3,22 +3,6 @@
     border: 15px;
 }
 
-/* html {
-    height: 100%;
-  } */
-  
-  /* body {
-    margin: 0;
-    height: 100%;
-  } */
-  /* header {
-    padding: 0px;
-    font-family: "Avanta Garde", "Optima", Arial, sans-serif;
-    background-color: #a9bd93;
-    color: antiquewhite;
-    border-radius: 15px;
-  } */
-  
 header h1 {
     display: inline-block;
     font-size: 48px;
@@ -32,11 +16,7 @@ header nav {
     font-family: "Avanta Garde", "Optima", Arial, sans-serif;
     font-size: 22px;
 }
-  
-/* header nav ul {
-    list-style-type: none;
-} */
-  
+   
 header nav ul li {
     display: inline-block;
     margin-left: 25px;
@@ -54,7 +34,7 @@ h2 {
   background-color: #a9bd93;
   border-radius: 15px;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
 }
 
 #sidebar {
@@ -87,11 +67,13 @@ h2 {
 
 #first-app {
   width: 1400px;
-  padding: 50px;
+  padding: 0px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  margin-left: 220px;
+  align-content: center;
+  justify-content: space-evenly;
+  margin-left: 20px;
 }
 
 .about {
@@ -124,12 +106,8 @@ footer {
   background-color: #a9bd93;
   color: antiquewhite;
   border-radius: 15px;
+  position: relative;
 }
-/* html,
-body {
-  height: 100%;
-  margin: 0;
-} */
 
 .work {
   min-height: 100%;
@@ -138,9 +116,10 @@ body {
   flex-direction: row;
   width: 1500px;
   height: 700px;
-  padding-left: 80px;
+  padding-left: 0px;
   align-items: center;
-  margin-left: 275px;
+  margin-left: 90px;
+  justify-content: flex-start;
 }
 .work > section {
   display: flex;
@@ -155,17 +134,6 @@ body {
   justify-content: right;
 }
 
-/* .box {
-  margin: 50px;
-} */
-/* .box1 { background-color: red; } */
-/* .box2 { background-color: orange; }
-.box3 { background-color: rgb(95, 62, 95); }
-.box4 { background-color: grey; }
-.box5 { background-color: rgb(59, 2, 2); }
-.box6 { background-color: rgb(41, 51, 194); }
-.box7 { background-color: rgb(161, 23, 104); }
-.box8 { background-color: rgb(247, 204, 12); } */
 legend {
     font-family: "Avanta Garde", "Optima", Arial, sans-serif;
     font-size: 20px;
@@ -173,27 +141,23 @@ legend {
     border: 1px solid rgb(165, 165, 165);
 }
 
-@media screen and (max-width: 768px) {
-    header,
-    nav {
-      flex-direction: column;
-      
+@media screen and (max-width: 400px) {
+    * {
+        background-color: rgb(105, 75, 35);
     }
-    #sidebar {
-        flex-direction: column;
-        order: 1;
-    }
+}
 
-    #about-me {
-        flex-direction: column;
-        order: 2;
+@media screen and (max-width: 600px) {
+    .work {
+        flex: 0 0 50%;
+        max-width: 50%;
     }
-    #work {
-        flex-direction: column;
-        order: 3;
+}
+
+@media screen and (max-width: 1000px) {
+    .work {
+        flex: 0 0 33.333%;
+        max-width: 33.333%;
     }
-    #resume {
-        flex-direction: column;
-        order: 4;
-    }
+    
 }
