--- a/assets/style.css
+++ b/assets/style.css
@@ -1,31 +1,31 @@
 * {
-    background-color: #a9bd93;
-    border: 15px;
+  background-color: #a9bd93;
+  border: 15px;
 }
 
 header h1 {
-    display: inline-block;
-    font-size: 48px;
-    color: antiquewhite;
+  display: inline-block;
+  font-size: 48px;
+  color: antiquewhite;
 }
 
 header nav {
-    padding-top: 70px;
-    margin-right: 15px;
-    float: right;
-    font-family: "Avanta Garde", "Optima", Arial, sans-serif;
-    font-size: 22px;
+  padding-top: 70px;
+  margin-right: 15px;
+  float: right;
+  font-family: "Avanta Garde", "Optima", Arial, sans-serif;
+  font-size: 22px;
 }
-   
+
 header nav ul li {
-    display: inline-block;
-    margin-left: 25px;
+  display: inline-block;
+  margin-left: 25px;
 }
-  
+
 h2 {
-    display: inline-block;
-    font-size: 22px;
-    color: antiquewhite;
+  display: inline-block;
+  font-size: 22px;
+  color: antiquewhite;
 }
 #main-container {
   display: table;
@@ -135,29 +135,30 @@ footer {
 }
 
 legend {
-    font-family: "Avanta Garde", "Optima", Arial, sans-serif;
-    font-size: 20px;
-    color: antiquewhite;
-    border: 1px solid rgb(165, 165, 165);
+  font-family: "Avanta Garde", "Optima", Arial, sans-serif;
+  font-size: 20px;
+  color: antiquewhite;
+  /* border: 1px solid rgb(165, 165, 165); */
 }
 
 @media screen and (max-width: 400px) {
-    * {
-        background-color: rgb(105, 75, 35);
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .work {
-        flex: 0 0 50%;
-        max-width: 50%;
-    }
+  * {
+    background-color: rgb(105, 75, 35);
+  }
 }
 
 @media screen and (max-width: 1000px) {
-    .work {
-        flex: 0 0 33.333%;
-        max-width: 33.333%;
-    }
+  .work {
+    flex: 0 0 50%;
+    max-width: 50%;
     
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .work {
+    flex: 0 0 33.333%;
+    max-width: 33.333%;
+    
+  }
 }
